# Interplay_Between_DNAPol_and_SSB

./: .gitignore  1_CalculatingDNApTrace_OT.ipynb  2_Correlation_image_force.ipynb  Change_point_detection_grandual_change_trace.py  README.md  pyproject.toml
.ipynb_checkpoints/: 1_CalculatingDNApTrace_OT-checkpoint.ipynb  2_Correlation_image_force-checkpoint.ipynb
Analyzing_ChangePoint_SingleMolecule/: Analyzing_ChangePoint__BayesianDetection.ipynb  Analyzing_ChangePoint__LinearSegmentFitting.ipynb  README.md
Analyzing_ChangePoint_SingleMolecule/Example data/: 20240221-183115 test  30nM T7 DNAP+ 30nMgp2.5 #018-002-cycle#01_StepDetectedData.xlsx  20240221-183115 test  30nM T7 DNAP+ 30nMgp2.5 #018-002-cycle#01_rawData.xlsx  20240221-183115 test  30nM T7 DNAP+ 30nMgp2.5 #018-002.tdms
Analyzing_ChangePoint_SingleMolecule/backup code can be deleted/: Linear_segment_fitting_for_T7DNAp.py  TDMS_read&breakpoint_detection.py  combine_rate_acceleration&breakpoint (3).py
Analyzing_DNAp_Displaces_SSB/: 1_CalculatingDNApTrace_OT.ipynb  2_Correlation_image_force.ipynb  README.md
Analyzing_PolExo_RealTimeExtensionData/: DNA Polymerase Activity Analysis.md  README.md  batch analysis of DNAp activity.ipynb  example data.xlsx
Analyzing_PolExo_RealTimeExtensionData/example data plot/: extracted_slopes_fits_stats_1.5_1_4.5.xlsx
example data analysis/force data/: 20200121-140145  6nM gp2.5-atto647N + 144nM wt gp2.5 + 30nM DNAp and etal #012-002-cycle#01-BasepairChange-filterd.eps  20200121-140145  6nM gp2.5-atto647N + 144nM wt gp2.5 + 30nM DNAp and etal #012-002.tdms  (+5 more)
(+14 files in other folders)
